--- a/app/src/main/res/layout/popup_length_entry_metric.xml
+++ b/app/src/main/res/layout/popup_length_entry_metric.xml
@@ -7,7 +7,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/popup_background"
+        android:background="@drawable/popup_background_cms"
         android:orientation="vertical"
         android:padding="20dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -20,13 +20,13 @@
             android:id="@+id/txtPopupTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Fun Day Catch Cms"
+            android:text="@string/species_and_length_cms"
             android:textSize="25sp"
             android:layout_gravity="center"
             android:gravity="center"
             android:textColor="@color/black"
             android:textStyle="bold"
-            android:background="@color/clip_yellow"
+            android:background="@color/lt_brown"
             android:padding="5dp"
             android:layout_marginBottom="10dp"   />
 
@@ -35,7 +35,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="horizontal"
-            android:gravity="left">
+            android:gravity="start">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -154,7 +154,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight=".5"
-                android:text="Centimeters"
+                android:text="@string/cms"
                 android:gravity="center"
                 android:textColor="@color/black"
                 android:textSize="16sp"
@@ -165,7 +165,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight=".5"
-                android:text="millimeter"
+                android:text="@string/mm"
                 android:gravity="center"
                 android:textColor="@color/black"
                 android:textSize="16sp"
@@ -187,7 +187,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="10dp"
                 android:layout_weight="1"
-                android:background="@drawable/btn_outline_grey"
+                android:background="@drawable/btn_outline_gold"
                 android:text="@string/cancel"
                 android:textColor="@color/black"
                 android:textSize="20sp"
@@ -201,7 +201,7 @@
                 android:text="@string/save_catch"
                 android:textColor="@color/black"
                 android:textSize="20sp"
-                android:background="@drawable/btn_outline_orange" />
+                android:background="@drawable/btn_add_catch" />
 
         </LinearLayout>
 
