--- a/app/src/main/res/layout/popup_weight_entry_lbs.xml
+++ b/app/src/main/res/layout/popup_weight_entry_lbs.xml
@@ -11,7 +11,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/popup_background"
+        android:background="@drawable/popup_background_lbs"
         android:orientation="vertical"
         android:padding="20dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -24,7 +24,7 @@
             android:id="@+id/txtPopupTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Fun Day Catch Lbs"
+            android:text="Fun Day Catch -Lbs-"
             android:textSize="25sp"
             android:layout_gravity="center"
             android:gravity="center"
@@ -101,7 +101,7 @@
                 android:layout_width="0dp"
                 android:layout_height="50dp"
                 android:layout_weight="0.3"
-                android:hint="0 to 99"
+                android:hint="@string/_0_to_99"
                 android:inputType="number"
                 android:textColor="@color/black"
                 android:gravity="center"
@@ -126,7 +126,7 @@
                 android:layout_width="0dp"
                 android:layout_height="50dp"
                 android:layout_weight="0.3"
-                android:hint="0 to 15"
+                android:hint="@string/_0_to_15"
                 android:inputType="number"
                 android:textColor="@color/black"
                 android:gravity="center"
