--- a/app/src/main/res/layout/popup_weight_entry_tour_lbs.xml
+++ b/app/src/main/res/layout/popup_weight_entry_tour_lbs.xml
@@ -7,7 +7,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/popup_background"
+        android:background="@drawable/popup_background_lbs"
         android:orientation="vertical"
         android:padding="20dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -115,6 +115,7 @@
                 android:layout_height="50dp"
                 android:layout_weight="1"
                 android:gravity="center"
+                android:layout_gravity="center"
                 android:hint="0-99"
                 android:textColorHint="@color/grey"
                 android:background="@color/very_lite_grey"
@@ -140,6 +141,7 @@
                 android:layout_height="50dp"
                 android:layout_weight="1"
                 android:gravity="center"
+                android:layout_gravity="center"
                 android:hint="0-15"
                 android:inputType="number"
                 android:textColor="@color/black"
@@ -207,7 +209,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:background="@drawable/btn_outline_green"
+                android:background="@drawable/btn_outline_grey"
                 android:text="Cancel"
                 android:layout_marginEnd="10dp"
                 android:textColor="@color/black"
@@ -219,7 +221,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:background="@drawable/btn_outline_blue"
+                android:background="@drawable/btn_menu_setup"
                 android:text="Save Catch"
                 android:textColor="@color/black"
                 android:textSize="20sp"
