--- a/app/src/main/res/layout/user_training_index.xml
+++ b/app/src/main/res/layout/user_training_index.xml
@@ -10,7 +10,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/Log_green_secondary"
+    android:background="@color/selection_list"
     android:contentDescription="@string/app_image_description">
 
     <ImageView
@@ -133,7 +133,7 @@
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:layout_weight=".4"
-            android:background="@color/clip_blue"
+            android:background="@drawable/btn_lbs"
             android:text="@string/fun_day_weight"
             android:textColor="@color/clip_white"
             android:textSize="19sp"
@@ -148,7 +148,7 @@
             android:layout_marginRight="10dp"
             android:layout_weight=".4"
             android:padding="2dp"
-            android:background="@color/clip_blue"
+            android:background="@drawable/btn_kgs"
             android:text="@string/fun_day_length"
             android:textColor="@color/clip_white"
             android:textSize="19sp"
@@ -174,7 +174,7 @@
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:layout_weight=".4"
-            android:background="@color/clip_orange"
+            android:background="@drawable/btn_inches"
             android:text="@string/tournament_weight"
             android:textColor="@color/black"
             android:textSize="20sp"
@@ -187,7 +187,7 @@
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:layout_weight=".4"
-            android:background="@color/clip_orange"
+            android:background="@drawable/btn_cms"
             android:text="@string/tournament_length"
             android:textColor="@color/black"
             android:textSize="20sp"
@@ -227,7 +227,7 @@
             android:layout_weight=".4"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="8dp"
-            android:background="@drawable/btn_outline_blue"
+            android:background="@drawable/btn_outline_orange"
             android:padding="10dp"
             android:text="Set Up GPS"
             android:textSize="20sp"
@@ -242,7 +242,7 @@
             android:layout_weight=".4"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="8dp"
-            android:background="@drawable/btn_outline_blue"
+            android:background="@drawable/btn_outline_dk_yellow"
             android:padding="10dp"
             android:text="Mapping GPS"
             android:textSize="20sp"
@@ -280,7 +280,7 @@
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:layout_weight=".4"
-            android:background="@drawable/btn_outline_red"
+            android:background="@drawable/btn_outline_blue"
             android:text="@string/menu"
             android:textAllCaps="true"
             android:textColor="@color/black"
@@ -294,7 +294,7 @@
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:layout_weight=".4"
-            android:background="@drawable/btn_outline_green"
+            android:background="@drawable/btn_menu_setup"
             android:text="@string/img_setup"
             android:textColor="@color/black"
             android:textSize="20sp"
