--- a/app/src/main/res/layout/user_training_voice_commands.xml
+++ b/app/src/main/res/layout/user_training_voice_commands.xml
@@ -118,7 +118,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:background="@drawable/btn_outline_green"
+            android:background="@drawable/btn_outline_blue"
             android:padding="15dp"
             android:text="@string/what_is_voice_command_control"
             android:textColor="@color/clip_blue"
@@ -133,11 +133,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
-            android:background="@drawable/btn_outline_red"
+            android:background="@drawable/btn_lbs"
             android:padding="15dp"
             android:text="@string/enabling_voice_controls"
             android:textColor="@color/clip_blue"
             android:textSize="20sp"
+            android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/btnWhatIsVCC" />
@@ -177,11 +178,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
-            android:background="@drawable/btn_outline_blue"
+            android:background="@drawable/btn_outline_softlock_blue"
             android:padding="15dp"
             android:text="@string/teaching_voice_control"
-            android:textColor="@color/clip_blue"
+            android:textColor="@color/clip_white"
             android:textSize="20sp"
+            android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/txtTeachVoice" />
@@ -221,7 +223,7 @@
                 android:layout_marginRight="10dp"
                 android:layout_marginBottom="30dp"
                 android:layout_weight=".4"
-                android:background="@drawable/btn_outline_red"
+                android:background="@drawable/btn_menu_setup"
                 android:text="@string/menu"
                 android:textAllCaps="true"
                 android:textColor="@color/black"
@@ -235,7 +237,7 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_weight=".4"
-                android:background="@drawable/btn_outline_green"
+                android:background="@drawable/btn_outline_blue"
                 android:text="@string/img_setup"
                 android:textColor="@color/black"
                 android:textSize="20sp"
