--- a/app/src/main/res/drawable/btn_outline_gold.xml
+++ b/app/src/main/res/drawable/btn_outline_gold.xml
@@ -2,7 +2,7 @@
 
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="#CDA510"/>
+    <solid android:color="#D89A32"/>
     <stroke
         android:width="4dp"
         android:color="#000000"/>
