--- a/app/src/main/res/layout/activity_catch_entry_lbs_ozs.xml
+++ b/app/src/main/res/layout/activity_catch_entry_lbs_ozs.xml
@@ -61,7 +61,7 @@
         android:layout_marginEnd="20dp"
         android:layout_marginTop="10dp"
         android:text="@string/goto_SetUp_description"
-        android:background="@drawable/btn_outline_red"
+        android:background="@drawable/btn_menu_setup"
         android:padding="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/txtLbs" />
@@ -97,7 +97,7 @@
             android:textSize="24sp"
             android:textColor="@color/white"
             android:textStyle="bold"
-            android:background="@color/clip_blue"/>
+            android:background="@drawable/btn_add_catch" />
 
     </LinearLayout>
 
