--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,12 +45,11 @@
         android:id="@+id/btnSetUp11"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
-        android:background="@drawable/btn_outline_blue"
+        android:background="@drawable/btn_outline_gold"
         android:gravity="center"
         android:paddingHorizontal="15dp"
         android:text="@string/set_up"
-        android:textColor="@color/clip_blue"
+        android:textColor="@color/black"
         android:textSize="28sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -89,7 +88,7 @@
         android:layout_marginTop="5dp"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="5dp"
-        android:background="@drawable/btn_outline_orange"
+        android:background="@drawable/btn_outline_dk_yellow"
         android:gravity="center"
         android:paddingHorizontal="10dp"
         android:text="@string/see_and_share_catches"
@@ -173,7 +172,7 @@
         android:layout_height="wrap_content"
         android:layout_marginVertical="5dp"
         android:paddingHorizontal="15dp"
-        android:background="@drawable/btn_outline_green"
+        android:background="@drawable/btn_outline_yellow"
         android:gravity="center"
         android:text="@string/voice_controls"
         android:textColor="@color/clip_blue"
