--- a/app/src/main/res/layout/activity_map_catch_locations.xml
+++ b/app/src/main/res/layout/activity_map_catch_locations.xml
@@ -28,7 +28,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="top|end"
             android:layout_margin="8dp"
-            android:background="@drawable/btn_outline_blue"
+            android:background="@drawable/btn_outline_green"
             android:padding="8dp"
             android:text="@string/select_query_fields_for_map"
             android:textColor="@color/clip_blue"
@@ -55,7 +55,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="25dp"
-                android:background="@drawable/btn_outline_red"
+                android:background="@drawable/btn_outline_blue"
                 android:padding="8dp"
                 android:text="@string/close_map"
                 android:textColor="@color/clip_blue"
@@ -70,7 +70,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="top|end"
                 android:layout_marginStart="15dp"
-                android:background="@drawable/btn_outline_green"
+                android:background="@drawable/btn_menu_setup"
                 android:gravity="center"
                 android:padding="8dp"
                 android:text="@string/map_settings"
