--- a/app/src/main/res/layout/activity_tournament_view.xml
+++ b/app/src/main/res/layout/activity_tournament_view.xml
@@ -9,7 +9,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#801976D2"
+    android:background="@color/softlock_green"
     tools:context=".CatchEntryTournament">
 
     <ImageView
@@ -53,7 +53,7 @@
         android:layout_marginStart="5dp"
         android:layout_marginTop="4dp"
         android:layout_marginEnd="5dp"
-        android:background="@color/softlock_blue"
+        android:background="@drawable/btn_add_catch"
         android:gravity="center"
         android:shadowColor="#8FC16D"
         android:text="@string/addCatchBtn"
@@ -383,7 +383,6 @@
         android:layout_height="0dp"
         android:layout_marginTop="5dp"
         android:layout_marginStart="5dp"
-        android:background="@color/third_variant"
         android:textAlignment="center"
         android:gravity="center"
         android:textColor="@color/black"
@@ -399,7 +398,6 @@
         android:layout_height="0dp"
         android:layout_marginStart="5dp"
         android:layout_marginTop="5dp"
-        android:background="@color/third_variant"
         android:textAlignment="center"
         android:gravity="center"
         android:textColor="@color/black"
@@ -415,7 +413,6 @@
         android:layout_height="0dp"
         android:layout_marginStart="5dp"
         android:layout_marginTop="5dp"
-        android:background="@color/third_variant"
         android:textAlignment="center"
         android:gravity="center"
         android:textColor="@color/black"
@@ -431,7 +428,6 @@
         android:layout_height="0dp"
         android:layout_marginTop="5dp"
         android:layout_marginStart="5dp"
-        android:background="@color/third_variant"
         android:textAlignment="center"
         android:gravity="center"
         android:textColor="@color/black"
@@ -447,7 +443,6 @@
         android:layout_height="0dp"
         android:layout_marginStart="5dp"
         android:layout_marginTop="5dp"
-        android:background="@color/third_variant"
         android:textAlignment="center"
         android:gravity="center"
         android:textColor="@color/black"
@@ -463,7 +458,6 @@
         android:layout_height="0dp"
         android:layout_marginTop="5dp"
         android:layout_marginStart="5dp"
-        android:background="@color/third_variant"
         android:textAlignment="center"
         android:gravity="center"
         android:textColor="@color/black"
@@ -581,7 +575,7 @@
         android:paddingHorizontal="10dp"
         android:text="@string/main_page"
         android:textAlignment="gravity"
-        android:textSize="25sp"
+        android:textSize="22sp"
         app:layout_constraintStart_toStartOf="@id/firstRealWeight"
         app:layout_constraintTop_toBottomOf="@id/totalRealWeight" />
 
@@ -595,7 +589,7 @@
         android:background="@drawable/btn_outline_blue"
         android:text="@string/setup"
         android:textAlignment="gravity"
-        android:textSize="25sp"
+        android:textSize="22sp"
         app:layout_constraintEnd_toEndOf="@+id/firstDecWeight"
         app:layout_constraintTop_toBottomOf="@id/totalRealWeight" />
 
