--- a/app/src/main/res/layout/dialog_edit_catch_cms.xml
+++ b/app/src/main/res/layout/dialog_edit_catch_cms.xml
@@ -3,7 +3,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/popup_background"
+    android:background="@drawable/popup_background_cms"
     android:orientation="vertical"
     android:padding="20dp" >
 
@@ -17,7 +17,8 @@
         android:text="@string/edit_catch_entry_cms"
         android:textColor="@color/black"
         android:textSize="24sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:background="@color/lt_brown"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -65,11 +66,12 @@
             android:layout_width="0dp"
             android:layout_height="50dp"
             android:layout_weight="1"
-            android:hint="Centimeters 0 to 99 "
+            android:hint="@string/cms_0_to_99"
             android:inputType="number"
             android:textColor="@color/black"
             android:background="@color/lite_grey"
             android:gravity="center"
+            android:layout_gravity="center"
             android:textSize="20sp"
             android:textStyle="bold"/>
 
@@ -79,11 +81,12 @@
             android:layout_height="50dp"
             android:layout_weight="1"
             android:layout_marginStart="10dp"
-            android:hint=" millimeter 0 to 9"
+            android:hint="@string/_0_9_mm"
             android:inputType="number"
             android:textColor="@color/black"
             android:background="@color/lite_grey"
             android:gravity="center"
+            android:layout_gravity="center"
             android:textSize="20sp"
             android:textStyle="bold" />
 
