--- a/app/src/main/res/layout/dialog_edit_catch_inches.xml
+++ b/app/src/main/res/layout/dialog_edit_catch_inches.xml
@@ -3,7 +3,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/popup_background"
+    android:background="@drawable/popup_background_inches"
     android:orientation="vertical"
     android:padding="20dp" >
 
@@ -18,7 +18,7 @@
         android:textColor="@color/black"
         android:textSize="24sp"
         android:textStyle="bold"
-        android:background="@color/Log_red"/>
+        android:background="@color/Log_orange"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -34,7 +34,7 @@
             android:layout_marginTop="5dp"
             android:layout_marginBottom="5dp"
             android:layout_marginEnd="20dp"
-            android:gravity="left"
+            android:gravity="start"
             android:text="@string/select_species"
             android:textColor="@color/black"
             android:textSize="19sp"
@@ -66,11 +66,12 @@
             android:layout_width="0dp"
             android:layout_height="50dp"
             android:layout_weight="1"
-            android:hint=" -Inches-  0 to 99 "
+            android:hint="@string/inches"
             android:inputType="number"
             android:textColor="@color/black"
             android:background="@color/lite_grey"
             android:gravity="center"
+            android:layout_gravity="center"
             android:textSize="20sp"
             android:textStyle="bold"/>
 
@@ -80,11 +81,12 @@
             android:layout_height="50dp"
             android:layout_weight="1"
             android:layout_marginStart="15dp"
-            android:hint=" Eights of Inch 0 to 7"
+            android:hint="@string/_0_7_8ths"
             android:inputType="number"
             android:textColor="@color/black"
             android:background="@color/lite_grey"
             android:gravity="center"
+            android:layout_gravity="center"
             android:textSize="18sp"
             android:textStyle="bold" />
 
