--- a/app/src/main/res/layout/popup_alarm.xml
+++ b/app/src/main/res/layout/popup_alarm.xml
@@ -2,29 +2,30 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/popup_background"
+    android:background="@drawable/popup_background_cms"
     android:gravity="center"
     android:orientation="vertical"
     android:padding="16dp">
 
 
     <!-- Time Picker -->
+
+    <!-- Set Alarm Button -->
     <TimePicker
         android:id="@+id/timePicker"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
-        android:timePickerMode="spinner"
-        android:background="@color/lt_brown"/>
+        android:background="@color/golden"
+        android:timePickerMode="spinner" />
 
-    <!-- Set Alarm Button -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center"
+        android:layout_marginBottom="10dp"
         android:gravity="center"
-        android:orientation="horizontal"
-        android:layout_marginBottom="10dp">
+        android:orientation="horizontal">
 
         <Button
             android:id="@+id/btnCancel"
@@ -32,24 +33,24 @@
             android:layout_height="50dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="20dp"
-            android:background="@drawable/btn_outline_grey"
+            android:layout_marginBottom="10dp"
+            android:background="@drawable/btn_outline_lt_brown"
             android:paddingHorizontal="10dp"
             android:text="@string/cancel"
             android:textAlignment="gravity"
-            android:textSize="25sp"
-            android:layout_marginBottom="10dp"/>
+            android:textSize="25sp" />
 
         <Button
             android:id="@+id/btnSetAlarm"
             android:layout_width="wrap_content"
             android:layout_height="50dp"
             android:layout_marginTop="8dp"
-            android:background="@drawable/btn_outline_green"
+            android:layout_marginBottom="10dp"
+            android:background="@drawable/btn_outline_orange"
             android:paddingHorizontal="10dp"
             android:text="@string/set_alarm"
             android:textAlignment="gravity"
-            android:textSize="25sp"
-            android:layout_marginBottom="10dp"/>
+            android:textSize="25sp" />
 
     </LinearLayout>
 
