--- a/app/src/main/res/layout/popup_species_options.xml
+++ b/app/src/main/res/layout/popup_species_options.xml
@@ -11,9 +11,10 @@
         android:id="@+id/btnEditSpeciesPopup"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="5dp"
+        android:padding="8dp"
         android:text="Edit Species"
         android:textSize="20sp"
+        android:textStyle="bold"
         android:textColor="@color/clip_blue"
         android:background="@drawable/btn_outline_blue"/>
 
@@ -23,8 +24,9 @@
         android:layout_height="wrap_content"
         android:text="Delete Species"
         android:layout_marginTop="10dp"
-        android:padding="7dp"
+        android:padding="8dp"
         android:textSize="20sp"
+        android:textStyle="bold"
         android:textColor="@color/clip_blue"
         android:background="@drawable/btn_outline_orange"/>
 
@@ -32,10 +34,11 @@
         android:id="@+id/btnCancelPopup"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="5dp"
+        android:padding="8dp"
         android:text="Cancel"
         android:layout_marginTop="10dp"
         android:textSize="20sp"
         android:textColor="@color/clip_blue"
-        android:background="@drawable/btn_outline_red"/>
+        android:textStyle="bold"
+        android:background="@drawable/btn_outline_grey"/>
 </LinearLayout>
